crates/parser/tests/programs/errors.as
var x:int = 5 trace(x);
var s:String = "unterminated
for each (var v:int; v < 3; v++) {}
1 + = 2;
